Next release
============

Features
--------

- Add optional ``max_age`` keyword value to the ``remember`` method of
  ``repoze.bfg.authentication.AuthTktAuthenticationPolicy``; if this
  value is passed to ``remember``, the generated cookie will have a
  corresponding Max-Age value.

Documentation
-------------

- Add information to the URL Dispatch narrative documentation about
  path pattern matching syntax.

Bug Fixes
---------

- Make ``route_url`` URL-quote segment replacements during generation.
  Remainder segments are not quoted.

1.0a3 (2009-06-24)
==================

Implementation Changes
----------------------

- ``repoze.bfg`` no longer relies on the Routes package to interpret
  URL paths.  All known existing ``path`` patterns will continue to
  work with the reimplemented logic, which lives in
  ``repoze.bfg.urldispatch``.  ``<route>`` ZCML directives which use
  certain attributes (uncommon ones) may not work (see "Backwards
  Incompatibilities" below).

Bug Fixes
---------

- ``model_url`` when passed a request that was generated as a result
  of a route match would fail in a call to ``route.generate``.

- BFG-on-GAE didn't work due to a corner case bug in the fallback
  Python implementation of ``threading.local`` (symptom:
  "Initialization arguments are not supported").  Thanks to Michael
  Bernstein for the bug report.

Documentation
-------------

- Added a "corner case" explanation to the "Hybrid Apps" chapter
  explaining what to do when "the wrong" view is matched.

- Use ``repoze.bfg.url.route_url`` API in tutorials rather than Routes
  ``url_for`` API.

Features
--------

- Added the ``repoze.bfg.url.route_url`` API.  This API allows you to
  generate URLs based on ``<route>`` declarations.  See the URL
  Dispatch narrative chapter and the "repoze.bfg.url" module API
  documentation for more information.

Backwards Incompatibilities
---------------------------

- As a result of disusing Routes, using the Routes ``url_for`` API